name:		nested-pretty
version:	0.1
license:	BSD3
license-file:	LICENSE
maintainer:	libraries@haskell.org
synopsis:	Pretty-printing library, with scoping, based on pretty-1.0.0.0
description:
	This package contains a pretty-printing library, with scoping.
build-type: Simple
exposed-modules:
	Text.PrettyPrint.NestedHughesPJ
build-depends: base

